# rust-java-gc-benchmark

./: BENCHMARK_FINDINGS.md  README.md  bench-parallel.sh  bench.sh  docker-compose.yml  prometheus.yml
grafana/dashboards/: gc-demo.json
java-service/: Dockerfile  Service.java
mock-backend/: Dockerfile  main.go
rust-service/: Cargo.toml  Dockerfile
rust-service/src/: main.rs
