[package]
name = "rust-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
prometheus = "0.13"
lazy_static = "1.4"

[profile.release]
opt-level = 3
lto = true
